[package]
name = "ctc"
version = "0.2.0"
edition = "2024"
description = "CLI tool to count tokens using Claude's Token Counting API"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
anyhow = "1"
